--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -3,9 +3,10 @@
  6 simple interface to parse from strings
 
  . update type checker for sane type variables
+ . force type variable introductions to be distinct (stop on var V<x,x>:...)
+ . does ImplementationChecker treat type vars correctly?
  . add implicit type variables (h:[ref,<x>name]x -> h<x>:[ref...)
- . Make flowgraphs of commands (rather than blocks)
- . Rebuild AST out of a flow graph of AssertAssumeCmd
+ . desugar dependent types in assumes/asserts
  . Transform BoogiePL expressions into SmtTerms (SmtTermBuilder)
    Take care of arrays
  . extract sharing in SimplifyProver, or use `flet' for z3
