--- a/src/freeboogie/trunk/FreeBoogie/CHANGELOG
+++ b/src/freeboogie/trunk/FreeBoogie/CHANGELOG
@@ -7,15 +7,14 @@ We introduced generics in BoogiePL so that we can write
   var heap<x> : [ref,<x>name]x;
   procedure store<x,y,z>([x,y]z,x,y,z) returns ([x,y]z);
 To specialize we write
-  heap' := store.<ref,<int>name,int>(heap.<int>,obj,int_field,3);
-Specialization is completely optional. The '.' is used to keep
-the parser simple. If the '.' would be omitted, then in
+  heap' := store<`ref,`<int>name,`int>(heap<`int>,obj,int_field,3);
+Specialization is completely optional. The ` is used to keep
+the parser simple. If omitted, then in
   call p(a<b,c<d,e<f,g<h)
-the parser could figure out only at the very end that the '<'
-signe mean less than and not specialization. The dot is unusual
-but the user should seldom need to explicitely specialize a
-procedure or a variable. For a similar reason we now force
-parentheses around tuples of IDs in calls:
+the parser could figure out only at the very end that
+the '<' signs mean "less than", not specialization. For
+a similar reason we now force parentheses around tuples
+of IDs in calls:
   call (a, b, c) := procThatReturnsTriple();
 but only if there is more than one identifier, to maintain
 compatibility with the stuff produced by Boogie.
@@ -27,4 +26,14 @@ mode. In 'compatibility mode' FB is supposed to do some extra
 preprocessing of the source produced by Boogie to make it
 legal FB code.
 
+I will allow arrays to be used as indices in arrays because
+I don't see why not. (I tend to think that it is confusing
+to use such a construct but I blame it on not having any
+concrete use in mind.)
 
+
+I will add type variables to axioms so that it's possible to
+write
+  function select<x,y>([x]y,x) returns (y);
+  function update<x,y>([x]y,x,y) returns ([x]y);
+  axiom<x,y> (forall a:[x]y,i:x,v:y:: select(update(a,i,v),i)==v);
