--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -1,11 +1,9 @@
- . The comments and code disagree for TypeChecker.checkExact
  . Test typechecker thoroughly.
  . Does ImplementationChecker treat type vars correctly?
  . Add the "-old" flag to make freeboogie accept constructs that
    I intend to deprecate.
  . Add implicit type variables (h:[ref,<x>name]x -> h<x>:[ref...)
- . Boogie generates code like "call a,b:=f()" and I don't parse it
-   because parenthesis are missing
+ . The comments and code disagree for TypeChecker.checkExact
  . Check that everything in the functional/parser test typechecks
    in "compatibility mode"
  . Finish passivate; now you can use fancy generics to deal with arrays
@@ -21,5 +19,6 @@
  . Cut out loops
  . Make flowgraph reducible
  . Simple interface to parse from strings
+ . Support for explicit specialization in typechecker
 
 vim:spell:ts=3:sw=3:fdm=manual:
