--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -1,7 +1,13 @@
+ . Add formal generics to ensures/requires.
  . Test typechecker thoroughly.
  . Does ImplementationChecker treat type vars correctly?
  . Add the "-old" flag to make freeboogie accept constructs that
    I intend to deprecate.
+ . Allow <x>T <: T only in "old" mode.
+ . Figure out the general rule that transforms
+     axiom (forall h:[<x>name]x, f:name :: old(h[f])==h[f])
+   into
+     axiom<y> (forall h<x>:[<x>name]x, f:<y>name :: old(h[f])==h[f])
  . Add implicit type variables (h:[ref,<x>name]x -> h<x>:[ref...)
  . The comments and code disagree for TypeChecker.checkExact
  . Check that everything in the functional/parser test typechecks
