1. first versioni of Inferrer 2. added |seeEach| method to Evaluator so that derived classes   can see all the nodes in case they want to distinguish by   some other criterion than type (first)

--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -25,5 +25,6 @@
    Is this a problem?
  . What is the most elegant way to write frame axioms in FB with generics?
  . Add a "for all types" construct.
+ . Hash-consing Type (and subclasses) might simplify code.
 
 vim:spell:ts=3:sw=3:fdm=manual:
