--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -26,5 +26,6 @@
  . What is the most elegant way to write frame axioms in FB with generics?
  . Add a "for all types" construct.
  . Hash-consing Type (and subclasses) might simplify code.
+ . Test if errors are reported correctly in old mode.
 
 vim:spell:ts=3:sw=3:fdm=manual:
