1. small (but important) fix to carry over locations in transformer 2. more resilient FrogivingSTB, i.e., doesn't crash when it doesn't   know what to do

--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -1,3 +1,4 @@
+ . Add generics on assume/assert.
  . Fix type-checking in "old" mode by a bit of type inference.
  . Test typechecker thoroughly.
  . Perhaps introduce dummy names where the user doesn't provide one
