--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -1,7 +1,5 @@
- . Add generics on assume/assert.
- . Fix type-checking in "old" mode by a bit of type inference.
  . Deal with (some of) the TODOs in comments.
- . Test typechecker thoroughly.
+ . Test typechecker thoroughly and add tests for the 'old' mode.
  . Perhaps introduce dummy names where the user doesn't provide one
    instead of carrying nulls around, which are hard to track.
  . Write an ant target that runs FindBugs.
