--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -27,5 +27,7 @@
  . Add a "for all types" construct.
  . Hash-consing Type (and subclasses) might simplify code.
  . Test if errors are reported correctly in old mode.
+ . Check performance.
+ . A log Formatter that uses a line per record.
 
 vim:spell:ts=3:sw=3:fdm=manual:
