--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -5,8 +5,6 @@
  . Write an ant target that runs FindBugs.
  . Does ImplementationChecker treat type vars correctly?
  . The comments and code disagree for TypeChecker.checkExact
- . Check that everything in the test "functional/parser" typechecks
-   in "old" mode
  . Finish passivate; now you can use fancy generics to deal with arrays
  . Desugar dependent types in assumes/asserts
  . Desugar function calls into assumes/asserts (remember that free is special)
@@ -29,5 +27,6 @@
  . Test if errors are reported correctly in old mode.
  . Check performance.
  . A log Formatter that uses a line per record.
+ . Get someone to review the code.
 
 vim:spell:ts=3:sw=3:fdm=manual:
