--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -1,8 +1,6 @@
  . Finish passivate.
+ . Do a profile and fix obvious performance issues.
  . Change the grammar and the AST to allow for parallel assignments.
- . Change the grammar, AST, and TC to allow for n-dimensional maps
-   (oh, btw, rename arrays into maps), and repeated selections even
-   on LHS of assignment/call.
  . Implement a generic UNION-FIND DS and use it in Inferrer and TypeChecker.
  . Test typechecker thoroughly and add tests for the 'old' mode.
  . Perhaps introduce dummy names where the user doesn't provide one
@@ -48,5 +46,7 @@
    at least give a warning that it is dangerous.
  . There is some duplication between VarCollector and ReadWriteSetFinder.
    Probably only one should remain.
+ . Update my ViM configuration so it stops inserting // in Java mode
+   (see :h 'comments')
 
 vim:spell:ts=3:sw=3:fdm=manual:
