--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -1,4 +1,3 @@
- . Do a profile and fix obvious performance issues.
  . Change the grammar and the AST to allow for parallel assignments.
  . Implement a generic UNION-FIND DS and use it in Inferrer and TypeChecker.
  . Test typechecker thoroughly and add tests for the 'old' mode.
@@ -19,7 +18,7 @@
    (such as skip "TRUE", respectively "FALSE"; and return
    neutral element when there are no operands)
  . Cut out loops
- . Make flowgraph reducible
+ . Make flow graphs reducible
  . Simple interface to parse from strings
  . In some cases Spec# generates (assume ... h1[n1] == h2[n2]...) which
    gets 'fixed' in old mode by adding a generic on procedure/implementation.
