(1) nicer temporary names (tests need update) (2) CallDesugarer first draft (option -dcall) (3) simple test for CallDesugarer (more needed) (4) switched to HashSet in TreeChecker. Only use Linked versions     when iterating over the hash since they take a lot of memory

--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -48,6 +48,11 @@
  . Most transformations during VC generation treat ignore generics
    completely. This should be fine in Boogie 2, but not when
    explicit specialization is allowed.
+ . Migrate to Google Code. First, patch svndumpfilter so that it
+   works correctly, at least for extracting FreeBoogie from
+   mobius.ucd.ie.
+ . Desugar where clauses too in SpecDesugarer.
+ . Implement an IdCleaner that maps all ids to a, b, ..., z, aa, ab, ...
 
 
 vim:spell:ts=3:sw=3:fdm=manual:
