--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -58,6 +58,8 @@
  . Make sure collection objects are reused when processing multiple
    files. That means, for example, that you instantiate VcGenerator
    only once per run (not once per file) from freeboogie.Main.
+ . Performance: It should work with a stack of 64MB and a heap of
+   64MB. Right now it eats too much memory.
 
 
 vim:spell:ts=3:sw=3:fdm=manual:
