--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -60,6 +60,9 @@
    only once per run (not once per file) from freeboogie.Main.
  . Performance: It should work with a stack of 64MB and a heap of
    64MB. Right now it eats too much memory.
+ . Make TermOfExpr sorted.
+ . Target the native format of Z3.
+ . Target the SMTLIB format.
 
 
 vim:spell:ts=3:sw=3:fdm=manual:
