first vcgen test

--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -1,4 +1,6 @@
  . Fix substitution bug (they are not done 'in parallel').
+ . Add line numbers to impl OK/NOK report.
+ . Allow easy redirection of output.
  . Desugar dependent types in procedure signatures.
  . Transform Boogie expressions into SmtTerms (SmtTermBuilder)
    Take care of arrays (does the prover know about arrays?)
