lotsof things are broken simplify doesn't have ite so i need to distinguish between terms and formulas in the backend afterall

--- a/src/freeboogie/trunk/FreeBoogie/TODO.txt
+++ b/src/freeboogie/trunk/FreeBoogie/TODO.txt
@@ -1,3 +1,4 @@
+ . Build (smt) quantifiers.
  . Transform Boogie expressions into SmtTerms (SmtTermBuilder)
  . Desugar dependent types in procedure signatures.
    Take care of arrays (does the prover know about arrays?)
